[tool.poetry]
name = "typeform-python"
version = "0.2.1"
description = "API wrapper for Typeform written in Python"
authors = ["Miguel Ferrer <ingferrermiguel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "typeform"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

